--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
+  "private": true,
+  "name": "gilmore-monorepo",
+  "description": "gilmore monorepo",
+  "homepage": "https://projects.pixelastic.com/gilmore/",
+  "keywords": [],
+  "workspaces": [
+    "lib",
+    "docs"
+  ],
+  "files": [],
   "devDependencies": {
-    "aberlaas": "1.25.0"
+    "aberlaas": "1.25.0",
+    "lerna": "4.0.0"
   },
-  "engines": {
-    "node": ">=14.17.0"
-  },
-  "files": ["lib/*.js"],
-  "license": "MIT",
-  "main": "lib/main.js",
-  "name": "gilmore",
   "scripts": {
+    "build": "./scripts/docs/build",
+    "build:prod": "./scripts/docs/build-prod",
     "ci": "./scripts/ci",
+    "cms": "./scripts/docs/cms",
     "husky:precommit": "./scripts/husky-precommit",
     "lint": "./scripts/lint",
     "lint:fix": "./scripts/lint-fix",
     "release": "./scripts/release",
-    "test": "./scripts/test",
-    "test:watch": "./scripts/test-watch"
-  },
-  "version": "0.0.1"
+    "serve": "./scripts/docs/serve",
+    "test": "./scripts/lib/test",
+    "test:watch": "./scripts/lib/test-watch"
+  }
 }
