--- a/lib/package.json
+++ b/lib/package.json
@@ -6,7 +6,10 @@
   "author": "Tim Carry (@pixelastic)",
   "license": "MIT",
   "main": "main.js",
-  "files": ["*.js"],
+  "files": [
+    "*.js",
+    "repo/"
+  ],
   "engines": {
     "node": ">=14.17.0"
   },
@@ -19,5 +22,10 @@
     "serve": "../scripts/docs/serve",
     "test": "../scripts/lib/test",
     "test:watch": "../scripts/lib/test-watch"
+  },
+  "dependencies": {
+    "callsites": "3.1.0",
+    "find-up": "5.0.0",
+    "firost": "2.16.2"
   }
 }
