--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "name": "gilmore-monorepo",
+  "type": "module",
   "description": "gilmore monorepo",
   "homepage": "https://projects.pixelastic.com/gilmore/",
   "keywords": [],
@@ -10,7 +11,7 @@
   ],
   "files": [],
   "devDependencies": {
-    "aberlaas": "1.25.0",
+    "aberlaas": "2.4.0",
     "lerna": "4.0.0"
   },
   "scripts": {
@@ -25,5 +26,6 @@
     "serve": "./scripts/docs/serve",
     "test": "./scripts/lib/test",
     "test:watch": "./scripts/lib/test-watch"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
