--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,4 @@
-# Hidden files (.prettierrc.js, .huskyrc.js, etc) are ignored by default by ESLint
+# Hidden files (.prettierrc.js, etc) are ignored by default by ESLint
 # The following line will unignore them
 !.*
 
@@ -7,3 +7,6 @@ node_modules/
 
 # .yarn contains the yarn source code, we don't need to lint it
 .yarn/
+
+# Ignore the documentation for now, I haven't migrated it to ESM yet
+docs/
