--- a/package.json
+++ b/package.json
@@ -19,13 +19,23 @@
     "build:prod": "./scripts/docs/build-prod",
     "ci": "./scripts/ci",
     "cms": "./scripts/docs/cms",
-    "husky:precommit": "./scripts/husky-precommit",
+    "compress": "./scripts/compress",
     "lint": "./scripts/lint",
     "lint:fix": "./scripts/lint-fix",
-    "release": "./scripts/release",
+    "release": "./scripts/lib/release",
     "serve": "./scripts/docs/serve",
     "test": "./scripts/lib/test",
-    "test:watch": "./scripts/lib/test-watch"
+    "test:watch": "./scripts/lib/test-watch",
+    "g:build": "./scripts/docs/build",
+    "g:build:prod": "./scripts/docs/build-prod",
+    "g:cms": "./scripts/docs/cms",
+    "g:compress": "./scripts/compress",
+    "g:lint": "./scripts/lint",
+    "g:lint:fix": "./scripts/lint-fix",
+    "g:release": "./scripts/lib/release",
+    "g:serve": "./scripts/docs/serve",
+    "g:test": "./scripts/lib/test",
+    "g:test:watch": "./scripts/lib/test-watch"
   },
   "packageManager": "yarn@4.0.2"
 }
