Massive cleanup of test files

--- a/lib/package.json
+++ b/lib/package.json
@@ -1,18 +1,30 @@
 {
   "name": "gilmore",
   "version": "0.2.0",
+  "author": "Tim Carry (@pixelastic)",
   "description": "Toolbox for git and GitHub",
+  "keywords": [
+    "git"
+  ],
   "repository": "pixelastic/gilmore",
   "homepage": "https://projects.pixelastic.com/gilmore/",
-  "author": "Tim Carry (@pixelastic)",
+  "type": "module",
   "license": "MIT",
-  "main": "main.js",
+  "engines": {
+    "node": ">=18.18.0"
+  },
   "files": [
     "*.js",
     "methods/"
   ],
-  "engines": {
-    "node": ">=14.17.0"
+  "exports": {
+    ".": "./main.js"
+  },
+  "main": "main.js",
+  "dependencies": {
+    "firost": "3.5.0",
+    "golgoth": "2.4.0",
+    "parse-github-repo-url": "1.4.1"
   },
   "scripts": {
     "build": "ABERLAAS_CWD=$INIT_CWD yarn g:build",
@@ -25,10 +37,5 @@
     "compress": "ABERLAAS_CWD=$INIT_CWD yarn g:compress",
     "lint": "ABERLAAS_CWD=$INIT_CWD yarn g:lint",
     "lint:fix": "ABERLAAS_CWD=$INIT_CWD yarn g:lint:fix"
-  },
-  "dependencies": {
-    "firost": "2.17.0",
-    "golgoth": "2.1.0",
-    "parse-github-repo-url": "1.4.1"
   }
 }
