--- a/docs/package.json
+++ b/docs/package.json
@@ -1,19 +1,21 @@
 {
+  "name": "gilmore-docs",
+  "private": true,
+  "files": [],
   "dependencies": {
     "norska": "2.9.0",
     "norska-theme-docs": "5.0.3"
   },
-  "files": [],
-  "name": "gilmore-docs",
-  "description": "Documentation for Gilmore, a toolbox for git and GitHub",
-  "private": true,
   "scripts": {
-    "lint": "../scripts/docs/lint",
-    "lint:fix": "../scripts/docs/lint-fix",
-    "build": "../scripts/docs/build",
-    "build:prod": "../scripts/docs/build-prod",
-    "cms": "../scripts/docs/cms",
-    "serve": "../scripts/docs/serve"
-  },
-  "version": "1.0.0"
+    "build": "cd ../ && ./scripts/build",
+    "build:prod": "cd ../ && ./scripts/build-prod",
+    "cms": "cd ../ && ./scripts/cms",
+    "compress": "cd ../ && ./scripts/compress",
+    "lint": "cd ../ && ./scripts/lint",
+    "lint:fix": "cd ../ && ./scripts/lint-fix",
+    "release": "cd ../ && ./scripts/release",
+    "serve": "cd ../ && ./scripts/serve",
+    "test": "cd ../lib && yarn run test",
+    "test:watch": "cd ../lib && yarn run test:watch"
+  }
 }
