--- a/docs/package.json
+++ b/docs/package.json
@@ -13,7 +13,7 @@
     "compress": "cd ../ && ./scripts/compress",
     "lint": "cd ../ && ./scripts/lint",
     "lint:fix": "cd ../ && ./scripts/lint-fix",
-    "release": "cd ../ && ./scripts/release",
+    "release": "cd ../lib && yarn run release",
     "serve": "cd ../ && ./scripts/serve",
     "test": "cd ../lib && yarn run test",
     "test:watch": "cd ../lib && yarn run test:watch"
