--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,8 @@
 {
   "name": "gilmore-docs",
   "private": true,
-  "files": [],
+  "type": "commonjs",
+  "description": "Documentation website of gilmore",
   "dependencies": {
     "norska": "2.9.0",
     "norska-theme-docs": "5.0.3"
