--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "private": true,
   "name": "gilmore-monorepo",
+  "private": true,
   "type": "module",
-  "description": "gilmore monorepo",
-  "homepage": "https://projects.pixelastic.com/gilmore/",
-  "keywords": [],
   "workspaces": [
     "lib",
     "docs"
   ],
-  "files": [],
+  "description": "gilmore monorepo",
+  "homepage": "https://projects.pixelastic.com/gilmore/",
+  "packageManager": "yarn@4.12.0",
   "devDependencies": {
-    "aberlaas": "2.11.0",
-    "lerna": "4.0.0"
+    "aberlaas": "2.23.0"
   },
   "scripts": {
     "build": "./scripts/build",
@@ -26,6 +24,5 @@
     "serve": "./scripts/docs/serve",
     "test": "./scripts/test",
     "test:watch": "./scripts/test-watch"
-  },
-  "packageManager": "yarn@4.0.2"
+  }
 }
